// Standalone synthetic blueprint review. No application API or health data.
const diagrams={"asset-feasibility.mmd":"flowchart TD\n  A[\"Pin licensed source and full Three.js baseline\"] --> B[\"Apply Swan interface and workflow\"]\n  B --> C[\"Bounded derivative asset sample\"]\n  C --> D{\"Detail, identity, alignment, picking and effort viable?\"}\n  D -- Yes --> E[\"Extend reviewed derivative catalog\"]\n  D -- No --> F[\"One focused correction or defer\"]\n  F --> G{\"Correction resolves sample?\"}\n  G -- Yes --> E\n  G -- No --> H[\"DEFER CUSTOM: keep detailed source assets\"]\n  E --> I[\"Release actual supported choices\"]\n  H --> I\n  I --> J[\"Measured or manual reference mode\"]\n  I -- Asset failure --> K[\"Previous approved asset version\"]\n  K --> I\n  C -- Cancel --> H\n","coach-state.mmd":"stateDiagram-v2\n  [*] --> RolePending\n  RolePending --> Denied: unknown or expired\n  RolePending --> Ready: authorized context\n  Ready --> Draft: type or select task\n  Draft --> Waiting: submit\n  Waiting --> Ready: explanation received\n  Waiting --> Reviewable: proposal ready\n  Waiting --> Checking: interrupted or response lost\n  Checking --> Reviewable: pending proposal recovered\n  Checking --> Committed: receipt recovered\n  Checking --> Draft: known failure\n  Reviewable --> Confirming: explicit confirm\n  Reviewable --> Deferred: cancel or defer\n  Reviewable --> Conflict: source changed\n  Conflict --> Draft: revise against latest\n  Confirming --> Committed: server commit\n  Confirming --> Checking: outcome unknown\n  Committed --> Ready: open receipt\n  Deferred --> Ready: return\n  Ready --> RolePending: switch target or access epoch\n  Draft --> RolePending: switch after draft decision\n  Reviewable --> Denied: access revoked\n  Denied --> RolePending: sign in or choose target\n","data-model.mmd":"erDiagram\n  USER ||--o{ PAIN_EPISODE : owns\n  PAIN_EPISODE ||--o{ PAIN_OBSERVATION : records\n  PAIN_EPISODE ||--o{ PAIN_REVIEW : receives\n  PAIN_OBSERVATION ||--o| MUTATION_RECEIPT : deduplicated_by\n  USER ||--o{ WORKOUT_SESSION : performs\n  WORKOUT_SESSION ||--o{ CANONICAL_SET : contains\n  EXERCISE o|--o{ CANONICAL_SET : identifies_when_known\n  EXERCISE ||--o{ EXERCISE_MUSCLE_MAPPING : maps\n  MUSCLE_GROUP ||--o{ EXERCISE_MUSCLE_MAPPING : receives\n  MUSCLE_GROUP ||--o{ ATLAS_GROUP_MAPPING : visualized_by\n  ATLAS_CATALOG ||--o{ ATLAS_GROUP_MAPPING : versions\n  USER ||--o{ RECOVERY_PROJECTION : derived_for\n  PAIN_EPISODE {\n    int id\n    int userId\n    string bodyRegion\n    string side\n    int revision\n    json anatomyLocation\n  }\n  PAIN_OBSERVATION {\n    uuid id\n    int episodeId\n    string eventKind\n    datetime reportedAt\n    datetime receivedAt\n  }\n  WORKOUT_SESSION {\n    uuid id\n    int userId\n    string status\n    datetime date\n  }\n  CANONICAL_SET {\n    string sourceSetId\n    uuid workoutSessionId\n    uuid exerciseId_nullable\n  }\n  RECOVERY_PROJECTION {\n    string sourceRevision\n    string mappingVersion\n    string modelVersion\n    string calibrationVersion_nullable\n    datetime asOf\n  }\n\n  USER ||--o{ BODY_MEASUREMENT : records\n  USER ||--o{ BODY_DISPLAY_PREFERENCE : chooses\n  USER ||--o{ MORPH_PROJECTION : derived_for\n  ATLAS_CATALOG ||--o{ MORPH_PROJECTION : parameterizes\n  BODY_MEASUREMENT {\n    int id\n    int userId\n    datetime measurementDate\n    decimal weight\n    string weightUnit\n    decimal bodyFatPercentage\n    string circumferenceUnit\n  }\n  BODY_DISPLAY_PREFERENCE {\n    int userId\n    string shapeMode\n    string variantId\n    string appearancePresetId\n    string assetVersion\n    int preferenceRevision\n    json visualAdjustments\n  }\n  MORPH_PROJECTION {\n    string sourceRevision\n    string inputVersion\n    string morphVersion\n    datetime asOf\n    json provenance\n  }\n","design-review.mmd":"flowchart TD\n  A[\"Classify actor, job and surface\"] --> B[\"Read canonical doctrine and mounted receipts\"]\n  B --> C[\"Three concrete directions\"]\n  C --> D[\"Desktop, mobile and adverse states\"]\n  D --> E[\"Compare same fixture tasks\"]\n  E --> F{\"Critical truth/access failure?\"}\n  F -- Yes --> G[\"Revise affected direction\"]\n  G --> D\n  F -- No --> H[\"Select or combine compatible strengths\"]\n  H --> I[\"Self-hostile review; clean outcome allowed\"]\n  I --> J[\"Versioned design contract and Mega receipt\"]\n  J --> K{\"Implementation authorized?\"}\n  K -- No --> L[\"Deliver blueprint and stop\"]\n  K -- Yes --> M[\"Build small slice and verify\"]\n  M --> N{\"Evidence passes existing review chain?\"}\n  N -- No --> G\n  N -- Yes --> O[\"Promote doctrine with rollback snapshot\"]\n","pain-flow.mmd":"flowchart TD\n  A[\"Open Pain Chart\"] --> B{\"Authorized target?\"}\n  B -- No --> C[\"Choose allowed target or sign in\"]\n  B -- Yes --> D[\"Load ported Atlas, reports and scoped body measurements independently\"]\n  D --> E{\"3D available?\"}\n  E -- No --> F[\"DOM region list and 2D fallback\"]\n  E -- Yes --> V[\"Honor saved measured or reference body mode\"]\n  V --> G[\"Easy default: select broad region and side\"]\n  V --> W[\"Customize preview; keep measured facts unchanged\"]\n  W --> V\n  F --> G\n  G --> AID[\"Optional Muscles, Bones or Joints view\"]\n  AID --> H[\"Draft score; tissue and symptom detail optional\"]\n  G --> H\n  H -- Optional --> I[\"Explore: veins, nerves, organs and advanced tools\"]\n  I --> J[\"Return Easy: assembled view, correct picking, draft retained\"]\n  J --> H\n  H --> K{\"Save or defer?\"}\n  K -- Defer --> L[\"Keep tab draft or explicitly discard\"]\n  K -- Save --> M{\"Valid and target unchanged?\"}\n  M -- No --> H\n  M -- Yes --> N[\"Submit same mutation ID\"]\n  N --> O{\"Server outcome\"}\n  O -- Committed --> P[\"Receipt and same-episode timeline\"]\n  O -- Lost response --> Q[\"Check outcome; replay same ID\"]\n  Q --> O\n  O -- Conflict --> R[\"Latest observation and draft diff\"]\n  R --> H\n  O -- Denied --> C\n  O -- Known failure --> S[\"Retain draft; scoped retry\"]\n  S --> N\n  P --> T[\"Trainer review and follow-up\"]\n  D --> U{\"Feature rollback?\"}\n  U -- Yes --> F\n","personalization-flow.mmd":"flowchart TD\n  A[\"Open authorized client in Planner or Pain Atlas\"] --> MODE{\"Saved mode or explicit choice?\"}\n  MODE -- Measured --> B[\"Load profile and timestamped measurements\"]\n  MODE -- Reference --> MANUAL[\"Load chosen catalog and visual preferences\"]\n  MANUAL --> H[\"Publish atomic morph revision\"]\n  MANUAL -- Unknown asset --> G[\"Reference or partial fit; retain measured facts\"]\n  B --> C{\"Valid units and supported fields?\"}\n  C -- Partial --> D[\"Apply known inputs; show missing and stale sources\"]\n  C -- Yes --> E[\"Fit coordinated custom anatomy\"]\n  D --> E\n  E --> F{\"Within reviewed rig and fit limits?\"}\n  F -- No --> G[\"Reference or partial fit; retain measured facts\"]\n  F -- Yes --> H[\"Publish atomic morph revision\"]\n  G --> I[\"Pain reporting remains usable\"]\n  H --> I\n  I --> J[\"Customize visual preview\"]\n  J --> K{\"Save, cancel or correct measurement?\"}\n  K -- Cancel --> H\n  K -- Save --> L[\"Save scoped display preference with revision\"]\n  L --> M{\"Outcome?\"}\n  M -- Committed --> H\n  M -- Conflict --> N[\"Compare saved preference and draft\"]\n  N --> J\n  M -- Uncertain --> O[\"Check receipt and retry same mutation ID\"]\n  O --> M\n  K -- Correct --> P[\"Canonical measurement flow; deliberate save\"]\n  P --> B\n  B -- Denied --> Q[\"Clear private shape and fields\"]\n  B -- Failed --> R[\"Same-target stale state; retry\"]\n  R --> B\n  H -- Source changed in measured mode --> B\n  MANUAL -- New measurements --> MANUAL\n  H -- Rig rollback --> S[\"Previous approved asset version; preserve reports\"]\n  S --> I\n","privacy-flow.mmd":"flowchart LR\n  subgraph Public[\"Public, cacheable assets\"]\n    Catalog[\"Licensed catalog and geometry\"]\n  end\n  subgraph Private[\"Authenticated Swan boundary\"]\n    UI[\"Role-scoped UI and memory-only draft\"]\n    Auth[\"Self / assignment / admin check\"]\n    DB[\"Pain and workout facts\"]\n    Projection[\"Recovery projection and evidence\"]\n    Confirm[\"Existing confirmed command service\"]\n  end\n  subgraph Provider[\"Existing permitted Coach boundary\"]\n    Filter[\"Consent and minimum structured context\"]\n    AI[\"Coach explanation / draft proposal\"]\n  end\n  Catalog --> UI\n  UI --> Auth\n  Auth --> DB\n  DB --> Projection\n  Projection --> UI\n  UI --> Filter\n  Filter --> AI\n  AI --> UI\n  UI -- \"Explicit existing confirmation\" --> Confirm\n  Confirm --> Auth\n  UI -. \"No health payload to public asset URLs\" .-> Catalog\n","recovery-flow.mmd":"flowchart TD\n  A[\"Committed workout save, edit, delete or import\"] --> B[\"Invalidate source revision after commit\"]\n  B --> C[\"Authorize target and read canonical completed sets\"]\n  C --> D[\"Dedupe source identities\"]\n  D --> E[\"Resolve reviewed exercise and muscle mapping\"]\n  E --> F{\"Enough supported data?\"}\n  F -- No --> G[\"Partial or unknown; retain observed facts\"]\n  F -- Yes --> H[\"Observed recent-load projection\"]\n  H --> I{\"Reviewed calibration profile enabled?\"}\n  I -- No --> J[\"Show recent load; estimate unavailable\"]\n  I -- Yes --> K[\"Versioned estimate and coverage\"]\n  G --> L[\"Merge independent reported-pain badges\"]\n  J --> L\n  K --> L\n  L --> M[\"Atlas, private charts, workout locker, Coach\"]\n  M --> N[\"Evidence drill-down or draft plan change\"]\n  N --> O{\"Explicit current confirmation?\"}\n  O -- No --> P[\"Explain or defer; no write\"]\n  O -- Yes --> Q[\"Existing scoped command service\"]\n  C --> R[\"Read error or stale source\"]\n  R --> S[\"Unavailable / stale, never all fresh\"]\n  S --> C\n","write-sequence.mmd":"sequenceDiagram\n  actor Client\n  participant UI as Pain UI\n  participant API as Scoped API\n  participant DB as PostgreSQL\n  Client->>UI: Save observation\n  UI->>API: Actor auth + target + revision + mutation key\n  API->>DB: Begin transaction, recheck access\n  alt Access denied\n    DB-->>API: No authorized target\n    API-->>UI: 403, clear private state\n  else Authorized\n    API->>DB: Lock episode, inspect key and payload hash\n    alt Same key committed\n      DB-->>API: Existing result IDs\n    else Revision conflict or changed payload\n      DB-->>API: Conflict, no new observation\n    else New valid mutation\n      API->>DB: Append observation + update summary + replay record\n      DB-->>API: Commit once\n    end\n    API-->>UI: Result or 409\n  end\n  alt Response lost after commit\n    UI->>API: Recheck/replay SAME mutation key\n    API->>DB: Reauthorize, read committed result\n    API-->>UI: Original receipt\n  end\n  UI-->>Client: Saved receipt or specific recovery\n"};
const modes = {pain:'Easy pain chart',recovery:'Training recovery',explore:'Explore anatomy'};

let easyArea='Left shoulder';
let easyLayer='area';
const easyHints={area:'Broad area is enough. No tissue selection required.',muscle:'Muscle groups help locate the area; selecting a muscle is optional.',bone:'Bone view helps locate the area; a selection does not diagnose the cause.',joint:'Choose a familiar joint area, such as shoulder or knee. Exact tissue is optional.'};
function syncEasy(){
 document.querySelectorAll('[data-easy-region-label]').forEach(el=>el.textContent=easyArea);
 document.querySelectorAll('[data-easy-area]').forEach(el=>el.setAttribute('aria-pressed',String(el.dataset.easyArea===easyArea)));
 document.querySelectorAll('[data-easy-layer]').forEach(el=>el.setAttribute('aria-pressed',String(el.dataset.easyLayer===easyLayer)));
 document.querySelectorAll('[data-easy-hint]').forEach(el=>el.textContent=easyHints[easyLayer]);
}
document.addEventListener('click',event=>{
 const b=event.target.closest('button');
 if(b?.dataset.easyArea){easyArea=b.dataset.easyArea;syncEasy();}
 if(b?.dataset.easyLayer){easyLayer=b.dataset.easyLayer;syncEasy();}
});

function atlas(mode,phone){
 const report=mode==='pain'?"<span class=\"micro\">EASY MODE · SYNTHETIC EXAMPLE</span><h4>Where does it hurt?</h4><p>Pick an area on the body or from the list. You do not need to know which tissue hurts.</p><div class=\"choice easy-categories\" role=\"group\" aria-label=\"Optional location view\"><button data-easy-layer=\"area\" aria-pressed=\"true\">Areas / Not sure</button><button data-easy-layer=\"muscle\" aria-pressed=\"false\">Muscles</button><button data-easy-layer=\"bone\" aria-pressed=\"false\">Bones</button><button data-easy-layer=\"joint\" aria-pressed=\"false\">Joints</button></div><p data-easy-hint aria-live=\"polite\">Broad area is enough. No tissue selection required.</p><div class=\"choice easy-areas\" role=\"group\" aria-label=\"Example region list\"><button data-easy-area=\"Left shoulder\" aria-pressed=\"true\">Left shoulder</button><button data-easy-area=\"Right knee\" aria-pressed=\"false\">Right knee</button><button data-easy-area=\"Lower back\" aria-pressed=\"false\">Lower back</button></div><h4 data-easy-region-label>Left shoulder</h4><p>Confirm or change side in the built report.</p><div class=\"field\"><label>Pain level</label><div class=\"score\"><strong>4 <small>/10</small></strong><span class=\"micro\">REPORTED EXAMPLE</span></div></div><div class=\"mock-button\">Save report</div><details class=\"easy-details\"><summary>Add details (optional)</summary><div class=\"field\"><label>What does it feel like?</label><div class=\"fake-input\">Aching ▾</div></div><div class=\"field\"><label>When do you notice it?</label><div class=\"fake-input\">During overhead movement</div></div><p>Timing, triggers and notes are optional.</p></details><p>No tissue classification is required to save. These controls demonstrate the planned flow only.</p>":
 mode==='recovery'?`<span class="micro">RECORDED WORKOUT EVIDENCE</span><h4>Quadriceps</h4><div class="fact"><span>Last trained</span><strong>Yesterday</strong></div><div class="fact"><span>Mapped working sets</span><strong>6</strong></div><div class="fact"><span>Source</span><strong>Lower-body session</strong></div><div class="warn">Trained recently<br>Recovery estimate not available</div><p>Observed load is available. An estimate needs a reviewed model and enough recorded data.</p><span class="text-link">Why this state →</span><div class="mock-button">Open source workout</div>`:
 `<span class="micro">ANATOMICAL REFERENCE</span><h4>Left patella</h4><p>Skeletal system · knee region</p><div class="fact"><span>Selection</span><strong>Isolated reference</strong></div><div class="mock-button">Use knee area in report</div><span class="text-link">Show surrounding anatomy</span><div class="field"><label>Separate structures · 55%</label><div class="slider"></div></div><div class="field optional"><label>Transparency · 70%</label><div class="slider"></div></div><p>This reference does not identify the cause of pain.</p>`;
 return `<div class="screen-title"><span class="micro">SWAN WORKFLOW · WIREFRAME</span><h3>${modes[mode]}</h3><p>${phone?"Phone report sheet; same full viewer stays mounted.":"This panel will connect to the ported viewer."}</p></div><aside class="report">${report}</aside><p class="reference-note">${phone?"Mobile: anatomy remains detailed; controls open in a sheet.":"Reference viewer is interactive. These Swan controls do not save or control the embedded source."}</p>`;
}
function coach(concept,phone){
 const names={care:'Swan Care Console',desk:'Session Desk',hybrid:'Coaching Desk'};
 const working=`<aside class="working"><span class="micro">WORKING DOCUMENT · REVIEW</span><h4>Today’s training adjustment</h4><p>For Sample Client · not applied</p><div class="fact"><span>Recorded pain</span><strong>Shoulder · 4/10</strong></div><div class="fact"><span>Recent training</span><strong>6 lower-body sets</strong></div><div class="warn">Review the shoulder report before choosing today’s movements.</div><p>Open the relevant workout and pain observations. Any adjustment stays a draft until reviewed.</p><div class="mock-button">Review proposal</div><span class="text-link">Open Pain Atlas →</span><div class="receipt-line">SOURCE REVISION: FIXTURE-07<br>RECOVERY ESTIMATE: UNAVAILABLE</div></aside>`;
 return `<div class="${concept}"><div class="coach-header"><div><span class="micro">SWAN COACH</span><br><strong>${names[concept]}</strong></div><div><strong>Sample Client ▾</strong><div class="meta">Current conversation target</div></div></div><div class="coach-tabs"><span>Talk</span><span>Review · 1</span><span>History</span><span>More ⋯</span></div><div class="coach-grid"><div class="conversation"><div class="message user">Help me review today’s training using the latest workout and pain report.</div><div class="message"><span class="micro">SWAN COACH</span><p>The latest report records left shoulder pain at 4/10. Yesterday’s workout contains six mapped lower-body working sets.</p><p>${phone?'Open the working document to review the evidence.':'I’ve opened those records beside our conversation. Recovery estimates are unavailable; the recorded training facts remain useful.'}</p><div class="evidence-chips"><span>Pain report · today</span><span>Workout · yesterday</span></div></div>${phone?'<div class="mock-button">Open working document · 1</div>':''}<div class="compose"><span>Message Swan Coach…</span><span class="send">Send ↑</span></div><span class="meta">Explicit review before changes are saved</span></div>${phone?'':working}</div>${phone?'<div class="working"><span class="micro">SHEET PREVIEW · WHEN OPENED</span><h4>Today’s training adjustment</h4><p>Source, proposed change, confirm and cancel stay together. Back returns to this conversation.</p></div>':''}</div>`;
}
const states=[
 ['Loading','Loading body and reports','The region list remains usable while anatomy loads.','Loading this conversation','Target is known; evidence is still loading.','Choose from list'],
 ['Empty','No pain reports yet','This is a successful authorized empty response, not an error.','Start with today’s training','One useful prompt and a few relevant actions.','Report an area'],
 ['Partial','Some workout data is unmapped','Recorded facts remain visible. Unknown muscles are not colored fresh.','Audio match needs review','The current target remains visible while speaker matching is unresolved.','Review missing data'],
 ['Success','Report saved','Left shoulder · 4/10 · added to the same episode.','Change saved once','Open the server receipt and the saved record. Confirm is no longer active.','Open receipt'],
 ['Denied','Access to this client changed','Private overlays and cached details are cleared.','Choose an authorized client','Unknown roles do not receive admin controls.','Choose client'],
 ['Validation error','Choose a pain level from 1 to 10','Your area and written details stay in the draft.','This proposal needs a target','Nothing has been applied. The invalid field receives focus.','Review field'],
 ['Failure','Couldn’t load training recovery','No freshness state is inferred from this failure.','Couldn’t load this queue','The failed source has a retry; other tasks remain usable.','Retry loading'],
 ['Retry / unknown save','Checking whether your report saved','Reuse the same mutation ID. Do not create a second report.','Checking the confirmed action','The durable receipt determines whether a write committed.','Check result'],
 ['Conflict / recovery','A newer observation exists','Review the newest score beside your draft before resubmitting.','This proposal uses older evidence','Refresh and review the change before confirming again.','Review latest'],
 ['Cancel / defer','Keep or discard this draft','Leaving the explorer never discards a pain report.','Proposal deferred','No workout changes were applied. Return to the conversation.','Keep working'],
 ['WebGL unavailable','Use the region list','You can report pain and save without a 3D-capable device.','Evidence is still available','The text report and source workouts remain readable.','Choose from list'],
 ['Stale estimate','Training data needs refresh','Pain remains visible. The last calculation is labeled with its source time.','Review current evidence','Coach cannot silently use an old estimate as current truth.','Refresh evidence']
];
const select=document.getElementById('state-select');
states.forEach(([name],i)=>select.add(new Option(name,String(i))));
function renderState(){const [name,pTitle,pText,cTitle,cText,action]=states[Number(select.value)];document.getElementById('state-preview').innerHTML=`<div class="state-grid"><article class="state-card"><span class="micro">PAIN / RECOVERY · ${name}</span><h3>${pTitle}</h3><p>${pText}</p><div class="mock-button">${action}</div></article><article class="state-card"><span class="micro">COACH · ${name}</span><h3>${cTitle}</h3><p>${cText}</p><div class="mock-button">${action}</div></article></div>`;}
function renderMode(mode){if(mode==='pain')easyLayer='area';document.getElementById('atlas-desktop').innerHTML=atlas(mode,false);document.getElementById('atlas-mobile').innerHTML=atlas(mode,true);document.querySelectorAll('[data-mode]').forEach(b=>b.setAttribute('aria-pressed',String(b.dataset.mode===mode)));syncEasy();}
function renderConcept(concept){document.getElementById('coach-desktop').innerHTML=coach(concept,false);document.getElementById('coach-mobile').innerHTML=coach(concept,true);document.querySelectorAll('[data-concept]').forEach(b=>b.setAttribute('aria-pressed',String(b.dataset.concept===concept)));}
document.querySelectorAll('[data-mode]').forEach(b=>b.addEventListener('click',()=>renderMode(b.dataset.mode)));
document.querySelectorAll('[data-concept]').forEach(b=>b.addEventListener('click',()=>renderConcept(b.dataset.concept)));
select.addEventListener('change',renderState);renderMode('pain');renderConcept('hybrid');renderState();
window.blueprintReview={modeCount:3,conceptCount:3,stateCount:states.length,diagramCount:Object.keys(diagrams).length,diagramRender:{status:'pending',count:0}};
const host=document.getElementById('diagrams');
for(const [file,source]of Object.entries(diagrams)){const article=document.createElement('article');article.className='diagram';const h=document.createElement('h3');h.textContent=file.replace('.mmd','').replaceAll('-',' ');const pre=document.createElement('pre');pre.className='mermaid';pre.textContent=source;article.append(h,pre);host.append(article);}
try {
 const {default:mermaid}=await import('https://cdn.jsdelivr.net/npm/mermaid@11.12.0/dist/mermaid.esm.min.mjs');
 mermaid.initialize({startOnLoad:false,securityLevel:'strict',theme:'default',flowchart:{htmlLabels:false}});
 for(const source of Object.values(diagrams))await mermaid.parse(source);
 await mermaid.run({querySelector:'.mermaid'});
 const count=document.querySelectorAll('.mermaid svg').length;
 window.blueprintReview.diagramRender={status:count===Object.keys(diagrams).length?'pass':'partial',count};
 document.getElementById('diagram-status').textContent=`${count}/${Object.keys(diagrams).length} diagrams rendered. Source files remain available in diagrams/.`;
} catch(error){window.blueprintReview.diagramRender={status:'unavailable',count:0,error:String(error)};document.getElementById('diagram-status').textContent='Mermaid preview unavailable. Source is included in diagrams/. Detail: '+String(error);}

document.querySelectorAll("[data-body-mode]").forEach(button=>button.addEventListener("click",()=>{const measured=button.dataset.bodyMode==="measured";document.querySelectorAll("[data-body-mode]").forEach(b=>b.setAttribute("aria-pressed",String(b===button)));document.getElementById("body-choice-note").textContent=measured?"Measured mode: fit supported dimensions from saved profile data; choose appearance separately. This is a wireframe, not a live profile connection.":"Reference mode: choose available anatomy and appearance independently. New measurements do not change this body choice. Workout and pain facts stay unchanged. This wireframe does not customize the source viewer."; }));
